feat: docker cp http endpoint, single file upload (#26)
* feat: docker cp http endpoint, single file upload

* fix: security updates

* fix: added missing closer for fileHeader
